UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/Pricing_Formula_Definition__c.object-meta.xml
<CustomObject>
    <label>Pricing Formula Definition</label>
    <nameField>
        <displayFormat>PFD{000000}</displayFormat>
        <label>Pricing Formula Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Formula Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>