UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Boolean_0__c.field-meta.xml
<CustomField>
    <fullName>Boolean_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean 0</label>
    <type>Checkbox</type>
</CustomField>