UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Boolean_1__c.field-meta.xml
<CustomField>
    <fullName>Boolean_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lit Building?</label>
    <type>Checkbox</type>
</CustomField>