UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Boolean_2__c.field-meta.xml
<CustomField>
    <fullName>Boolean_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean 2</label>
    <type>Checkbox</type>
</CustomField>