UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Decimal_0__c.field-meta.xml
<CustomField>
    <fullName>Decimal_0__c</fullName>
    <label>Class of Service</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>