UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Decimal_1__c.field-meta.xml
<CustomField>
    <fullName>Decimal_1__c</fullName>
    <label>Fiber cost per foot</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>