UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Formula_0__c.field-meta.xml
<CustomField>
    <fullName>Formula_0__c</fullName>
    <formula>IF (Integer_2__c &lt; Integer_1__c || Integer_1__c &gt; 100000,
    1000000, 
    MIN(
        1000000,
        MAX(
            Decimal_5__c,
            (MIN(
                IF(Integer_1__c &lt;= 20,
                    (2173+1500+IF(Integer_3__c&lt;2000, 767, IF(Integer_3__c&lt;6000, 1198, IF(Integer_3__c&lt;10000, 2435, 1000000000000)))),
                    IF(Integer_1__c&lt;=50,
                        (3671+1500+IF(Integer_3__c&lt;2000, 1699, IF(Integer_3__c&lt;6000, 1699, IF(Integer_3__c&lt;10000, 4174, 1000000000000)))),
                        1000000000000
                    )
                ),
                IF(Integer_4__c&lt;=4000, Decimal_1__c*Integer_4__c + 3000, 1000000000000)) * Decimal_2__c
            ) * Decimal_3__c + Decimal_4__c 
        ) + Decimal_0__c
    )
)</formula>
    <label>Address Based Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>