UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Formula_0b__c.field-meta.xml
<CustomField>
    <fullName>Formula_0b__c</fullName>
    <formula>IF (AND(String_1__c == &apos;ENT_ETH_EIA_003&apos;,(Integer_0__c &lt;=12)), 500, IF(AND(String_1__c != &apos;ENT_ETH_EIA_003&apos;,(Integer_0__c &gt;=36)),250,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula 0b</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>