UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Formula_1__c.field-meta.xml
<CustomField>
    <fullName>Formula_1__c</fullName>
    <formula>IF(
    Integer_2__c &lt; Integer_1__c,
    1000000,
    IF (
        AND(
	    Integer_4__c&lt;=2000,
	    Integer_1__c = 1000,
	   String_2__c != &apos;Yes&apos;,
	    Integer_0__c &gt;=36
	),
        CASE(Integer_0__c,
            60, 870,
            36, 980,
            0
        ),
        Formula_0__c
    )
)</formula>
    <label>1G Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>