UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Formula_3__c.field-meta.xml
<CustomField>
    <fullName>Formula_3__c</fullName>
    <formula>IF (Integer_2__c &lt; Integer_1__c ,
 1000000,IF ( Integer_1__c &gt; 2000,Decimal_5__c , Formula_5__c))</formula>
    <label>DIA HBE Eligible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>