UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Formula_4b__c.field-meta.xml
<CustomField>
    <fullName>Formula_4b__c</fullName>
    <formula>IF (Integer_0__c &gt;=36, 0, 250)</formula>
    <label>2G Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>