UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/Integer_3__c.field-meta.xml
<CustomField>
    <fullName>Integer_3__c</fullName>
    <label>Copper Distance (ft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>