UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/String_0__c.field-meta.xml
<CustomField>
    <fullName>String_0__c</fullName>
    <label>State Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>