UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/fields/String_1__c.field-meta.xml
<CustomField>
    <fullName>String_1__c</fullName>
    <label>String 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>