UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Formula_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Boolean_1__c</columns>
    <columns>Decimal_0__c</columns>
    <columns>Decimal_1__c</columns>
    <columns>Decimal_2__c</columns>
    <columns>Decimal_3__c</columns>
    <columns>Decimal_4__c</columns>
    <columns>Decimal_5__c</columns>
    <columns>Integer_0__c</columns>
    <columns>Integer_1__c</columns>
    <columns>Integer_2__c</columns>
    <columns>Integer_3__c</columns>
    <columns>Integer_4__c</columns>
    <columns>Formula_0__c</columns>
    <columns>Formula_0b__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>